src/objects/Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_email__c</fullName>
        <label>Customer email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IFCS_Code__c</fullName>
        <label>IFCS Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Account Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Fixed Deposit</fullName>
                </value>
                <value>
                    <fullName>Salary</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bank Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Trusted_Banks</fullName>
        <columns>NAME</columns>
        <columns>Bank_Name__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Trusted Banks</label>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>